# tb_digital_twin

./: CMakeLists.txt  package.xml
launch/: efficiency_map.launch  error_watchdog.launch  input_current.launch  launch_full.launch  power.launch  rotation.launch  rotationConvert.launch  run.launch  torque.launch
launch/loading_motor_dt/: efficiency_map.launch  launch_full.launch  power.launch  rotationConvert.launch  run.launch  torque.launch
msg/: Current.msg  Power.msg  Voltage.msg
src/: AngularConverter.cpp  Controller.cpp  EfficiencyMap.cpp  ParseDewetron.cpp  ParseDewetron.h  PhysicalValueTemplate.cpp  PhysicalValueTemplate.h  PowerCalculator.cpp  Rotation.cpp  TorqueCalculator.cpp  WindingErrorChecker.cpp  angularConverter.cpp  checkError.cpp  currentVoltageFlow.cpp  parseDewetron.cpp  parseDewetron.h  pid.cpp  powerCalculator.cpp  torqueCalculator.cpp
src/loading_motor_dt/: AngularConverter.cpp  Controller.cpp  ParseDewetron.cpp  TorqueCalculator.cpp  csvRead.cpp  currentVoltageFlow.cpp  pid.h
